@@ -5,6 +5,7 @@ java \
   --add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED \
   --add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED \
   --add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED \
+  --add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED \
   --add-opens=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED \
   --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED \
   --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED \
